--- a/greentoclean.html
+++ b/greentoclean.html
@@ -34,7 +34,7 @@
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="assets/img/favicon.png">
     <!-- Title -->
-    <title>Clarksville Pool Cleaning</title>
+    <title>Green to Clean</title>
 </head>
 
 <body>
@@ -276,7 +276,7 @@
     <!-- End Header Area -->
 
     <!-- Start Page Title Area -->
-    <div class="page-title-area bg-19">
+    <!-- <div class="page-title-area bg-19">
         <div class="container">
             <div class="page-title-content">
                 <h2>Services details</h2>
@@ -290,10 +290,11 @@
                 </ul>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- End Page Title Area -->
 
     <!-- Start Services Details Area -->
+    <Br><br><br>
     <section class="services-details-area pt-100 pb-70">
         <div class="container">
             <div class="row">
@@ -310,70 +311,66 @@
                         <div class="services-contents">
                             <h2>Green to Clean</h2>
                             <br>
-                            <p>Let us give you the best experience you could ask for come summer time! We strive to be the person you want to call every year to make sure that your pool, not just looks, but is amazing! Please reach out to us about any of
-                                our services if you have any questions or more specific things, we're flexible! You can see some of our services to the side, and these all will consist of the following:
+                            <p>Save time and money while eliminating algae from your pool with green pool cleaning from your local expert. We'll get your pool water clean and healthy again in no time! No matter how green your pool has turned, our technicians
+                                can get it back to looking its best! It’s important to use the correct combination of chemicals to fix your green pool.
                             </p>
 
-                            <ul>
-                                <li>Brush & vacuum</li>
-                                <li>Skimmer & pump basket cleaning</li>
-                                <li>Water chemistry testing</li>
-                                <li>Chemical additions & delivery</li>
-                                <li>Electronic service completion reports</li>
-                            </ul>
+                            <p>Your pool may have insufficient chlorine because you haven’t been regularly adding chlorine to the water. Or, it may have insufficient chlorine due to recent heavy or unusual use. When a pool is put under this sort of pressure,
+                                it may require more than the usual dose of chlorine to fight off encroaching algae. This is a good example of why you can’t take a one-size-fits-all approach to your pool’s regular chlorine treatment.</p>
+                            <img src="assets/img/services/green-pool2.png" alt="Green Pool" style="padding-top: 35px;">
                         </div>
 
-                        <div class="services-contents">
-                            <h3>Schedule your regular pool cleaning today</h3>
-                            <p>You can reach out to us <a href="contact.html" style="color:orange;">here</a> with any questions and concerns you have, or set up an appointment.</p>
+                        <div class="services-contents" style="padding-top: 100px;">
+                            <h3>Schedule your green to clean service today!</h3>
+                            <p>You can reach out to us <a href="contact.html " style="color:orange; ">here</a> with any questions and concerns you have, or set up an appointment.</p>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-lg-4">
-                    <div class="services-sidebar">
-                        <div class="services-category">
+                <div class="col-lg-4 ">
+                    <div class="services-sidebar ">
+                        <div class="services-category ">
                             <ul>
                                 <li>
                                     <a href="#">
 											Green to Clean	
-											<i class="bx bx-chevron-right"></i>
+											<i class="bx bx-chevron-right "></i>
 										</a>
                                 </li>
                                 <li>
-                                    <a href="#">
+                                    <a href="oneanddone.html">
 											One and Done	
-											<i class="bx bx-chevron-right"></i>
+											<i class="bx bx-chevron-right "></i>
 										</a>
                                 </li>
                                 <li>
-                                    <a href="#">
+                                    <a href="sand-filter.html">
 										Sand Filter Changes
-											<i class="bx bx-chevron-right"></i>
+											<i class="bx bx-chevron-right "></i>
 										</a>
                                 </li>
                                 <li>
-                                    <a href="#">
+                                    <a href="maintenance.html">
 										Maintenance
-											<i class="bx bx-chevron-right"></i>
+											<i class="bx bx-chevron-right "></i>
 										</a>
                                 </li>
                                 <li>
-                                    <a href="#">
+                                    <a href="openandclose.html">
 										Openings and Closings
-											<i class="bx bx-chevron-right"></i>
+											<i class="bx bx-chevron-right "></i>
 										</a>
                                 </li>
                                 <li>
-                                    <a href="#">
+                                    <a href="deckcleaning.html">
 										Deck Pressure Washing	
-											<i class="bx bx-chevron-right"></i>
+											<i class="bx bx-chevron-right "></i>
 										</a>
                                 </li>
                             </ul>
                         </div>
-                        <a href="contact.html">
-                            <button class="default-btn" style="background-color: #ff8c00; display:block;">
+                        <a href="contact.html ">
+                            <button class="default-btn " style="background-color: #ff8c00; display:block; ">
 							<span>Contact Us</span>
 						</button>
                         </a>
@@ -384,81 +381,81 @@
     </section>
     <!-- End Services Details Area -->
     <!-- Start Footer Area -->
-    <footer class="footer-area pt-100 pb-70">
-        <div class="container" style="text-align: center;">
-            <div class="row" style="justify-content: center;">
-                <div class="col-lg-3 col-md-6">
-                    <div class="single-footer-widget">
-                        <a href="index.html" class="logo">
+    <footer class="footer-area pt-100 pb-70 ">
+        <div class="container " style="text-align: center; ">
+            <div class="row " style="justify-content: center; ">
+                <div class="col-lg-3 col-md-6 ">
+                    <div class="single-footer-widget ">
+                        <a href="index.html " class="logo ">
                             <br><br>
-                            <h1 style="color:white;text-align:center;margin-right:40px;">Clarksville Pool Cleaning</h1>
+                            <h1 style="color:white;text-align:center;margin-right:40px; ">Clarksville Pool Cleaning</h1>
                         </a>
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-6">
-                    <div class="single-footer-widget">
+                <div class="col-lg-3 col-md-6 ">
+                    <div class="single-footer-widget ">
                         <h3>Our services</h3>
 
-                        <ul class="import-link">
-                            <li style="text-align:center;">
-                                <a href="#" style="text-align:center;">Green To Clean</a>
+                        <ul class="import-link ">
+                            <li style="text-align:center; ">
+                                <a href="# " style="text-align:center; ">Green To Clean</a>
                             </li>
-                            <li style="text-align:center;">
-                                <a href="#">One and Done</a>
+                            <li style="text-align:center; ">
+                                <a href="# ">One and Done</a>
                             </li>
-                            <li style="text-align:center;">
-                                <a href="#">Sand Filter Changes</a>
+                            <li style="text-align:center; ">
+                                <a href="# ">Sand Filter Changes</a>
                             </li>
-                            <li style="text-align:center;">
-                                <a href="#">Maintenance</a>
+                            <li style="text-align:center; ">
+                                <a href="# ">Maintenance</a>
                             </li>
-                            <li style="text-align:center;">
-                                <a href="#">Openings and Closings</a>
+                            <li style="text-align:center; ">
+                                <a href="# ">Openings and Closings</a>
                             </li>
-                            <li style="text-align:center;">
-                                <a href="#">Deck Pressure Washing</a>
+                            <li style="text-align:center; ">
+                                <a href="# ">Deck Pressure Washing</a>
                             </li>
 
                         </ul>
                     </div>
                 </div>
 
-                <!-- <div class="col-lg-3 col-md-6">
-                        <div class="single-footer-widget">
-                            <h3 style="text-align:center; color:#201f25;">.</h3>
+                <!-- <div class="col-lg-3 col-md-6 ">
+                        <div class="single-footer-widget ">
+                            <h3 style="text-align:center; color:#201f25; ">.</h3>
     
-                            <ul class="import-link">
-                                <li style="text-align:center;">
-                                    <a href="#">Maintenance</a>
+                            <ul class="import-link ">
+                                <li style="text-align:center; ">
+                                    <a href="# ">Maintenance</a>
                                 </li>
-                                <li style="text-align:center;">
-                                    <a href="#">Openings and Closings</a>
+                                <li style="text-align:center; ">
+                                    <a href="# ">Openings and Closings</a>
                                 </li>
-                                <li style="text-align:center;">
-                                    <a href="#">Deck Pressure Washing</a>
+                                <li style="text-align:center; ">
+                                    <a href="# ">Deck Pressure Washing</a>
                                 </li>
                             </ul>
                         </div>
                     </div> -->
 
 
-                <div class="col-lg-3 col-md-6">
-                    <div class="single-footer-widget">
-                        <h3 style="text-align:center;">Contact us</h3>
+                <div class="col-lg-3 col-md-6 ">
+                    <div class="single-footer-widget ">
+                        <h3 style="text-align:center; ">Contact us</h3>
 
-                        <ul class="address" style="text-align: center;">
-                            <li class="location">
-                                <i class="bx bxl-facebook" style="margin-left:30px;"></i>
-                                <a href="https://www.facebook.com/clarksvillepoolcleaning" target="_blank" style="margin-left:10px;">Message us on Facebook</a>
+                        <ul class="address " style="text-align: center; ">
+                            <li class="location ">
+                                <i class="bx bxl-facebook " style="margin-left:30px; "></i>
+                                <a href="https://www.facebook.com/clarksvillepoolcleaning " target="_blank " style="margin-left:10px; ">Message us on Facebook</a>
                             </li>
                             <li>
-                                <i class="bx bxs-envelope" style="margin-left:30px;"></i>
-                                <a href="mailto:clarksvillepoolcleaning@gmail.com" style="margin-left:10px;">Email Us</a>
+                                <i class="bx bxs-envelope " style="margin-left:30px; "></i>
+                                <a href="mailto:clarksvillepoolcleaning@gmail.com " style="margin-left:10px; ">Email Us</a>
                             </li>
                             <li>
-                                <i class="bx bxs-phone-call" style="margin-left:30px;"></i>
-                                <a href="tel:+1-(931) 320-8307" style="margin-left:10px;">+1 (931) 320-8307</a>
+                                <i class="bx bxs-phone-call " style="margin-left:30px; "></i>
+                                <a href="tel:+1-(931) 320-8307 " style="margin-left:10px; ">+1 (931) 320-8307</a>
                             </li>
                         </ul>
                     </div>
@@ -469,52 +466,52 @@
     <!-- End Footer Area -->
 
     <!-- Start Copy Right Area -->
-    <div class="copy-right-area">
-        <div class="container">
+    <div class="copy-right-area ">
+        <div class="container ">
             <p>
-                Copyright <i class="bx bx-copyright"></i>2021 Clarksville Pool Cleaning. Designed By
-                <a href="https://ashtinjevans.com" target="_blank">Ashtin Evans</a>
+                Copyright <i class="bx bx-copyright "></i>2021 Clarksville Pool Cleaning. Designed By
+                <a href="https://ashtinjevans.com " target="_blank ">Ashtin Evans</a>
             </p>
         </div>
     </div>
     <!-- End Copy Right Area -->
 
     <!-- Start Go Top Area -->
-    <div class="go-top">
-        <i class="bx bx-chevrons-up"></i>
-        <i class="bx bx-chevrons-up"></i>
+    <div class="go-top ">
+        <i class="bx bx-chevrons-up "></i>
+        <i class="bx bx-chevrons-up "></i>
     </div>
     <!-- End Go Top Area -->
 
 
     <!-- Jquery Min JS -->
-    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.min.js "></script>
     <!-- Bootstrap Bundle Min JS -->
-    <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/bootstrap.bundle.min.js "></script>
     <!-- Meanmenu Min JS -->
-    <script src="assets/js/meanmenu.min.js"></script>
+    <script src="assets/js/meanmenu.min.js "></script>
     <!-- Wow Min JS -->
-    <script src="assets/js/wow.min.js"></script>
+    <script src="assets/js/wow.min.js "></script>
     <!-- Owl Carousel Min JS -->
-    <script src="assets/js/owl.carousel.min.js"></script>
+    <script src="assets/js/owl.carousel.min.js "></script>
     <!-- Nice Select Min JS -->
-    <script src="assets/js/nice-select.min.js"></script>
+    <script src="assets/js/nice-select.min.js "></script>
     <!-- Magnific Popup Min JS -->
-    <script src="assets/js/magnific-popup.min.js"></script>
+    <script src="assets/js/magnific-popup.min.js "></script>
     <!-- Jarallax Min JS -->
-    <script src="assets/js/jarallax.min.js"></script>
+    <script src="assets/js/jarallax.min.js "></script>
     <!-- Appear Min JS -->
-    <script src="assets/js/appear.min.js"></script>
+    <script src="assets/js/appear.min.js "></script>
     <!-- Odometer Min JS -->
-    <script src="assets/js/odometer.min.js"></script>
+    <script src="assets/js/odometer.min.js "></script>
     <!-- Form Validator Min JS -->
-    <script src="assets/js/form-validator.min.js"></script>
+    <script src="assets/js/form-validator.min.js "></script>
     <!-- Contact JS -->
-    <script src="assets/js/contact-form-script.js"></script>
+    <script src="assets/js/contact-form-script.js "></script>
     <!-- Ajaxchimp Min JS -->
-    <script src="assets/js/ajaxchimp.min.js"></script>
+    <script src="assets/js/ajaxchimp.min.js "></script>
     <!-- Custom JS -->
-    <script src="assets/js/custom.js"></script>
+    <script src="assets/js/custom.js "></script>
 </body>
 
 
