--- a/services.html
+++ b/services.html
@@ -34,7 +34,7 @@
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="assets/img/favicon.png">
     <!-- Title -->
-    <title>Clarksville Pool Cleaning</title>
+    <title>Clarksville Pool Cleaning - Services</title>
 </head>
 
 <body>
@@ -276,7 +276,7 @@
     <!-- End Header Area -->
 
     <!-- Start Page Title Area -->
-    <div class="page-title-area bg-18">
+    <!-- <div class="page-title-area bg-18">
         <div class="container">
             <div class="page-title-content">
                 <h2>Our Services</h2>
@@ -290,10 +290,13 @@
                 </ul>
             </div>
         </div>
-    </div>
+
+    </div> -->
+
     <!-- End Page Title Area -->
 
     <!-- Start Our Services Area -->
+    <br><br><br><br><br>
     <section class="our-services-area our-services-area-three bg-color pt-100 pb-70">
         <div class="container">
             <div class="section-title">
@@ -304,20 +307,20 @@
             <div class="row">
                 <div class="col-lg-4 col-sm-6">
                     <div class="single-services">
-                        <a href="services-details.html">
+                        <a href="greentoclean.html">
                             <img src="assets/img/services/services-1.jpg" alt="Image">
                         </a>
 
                         <div class="services-content">
                             <h3>
-                                <a href="service-details.html">
+                                <a href="greentoclean.html">
 									Green to Clean
 									</a>
                             </h3>
 
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+                            <p>Save time and money while eliminating algae from your pool with our green to clean service. We'll get your pool water clean in no time!</p>
 
-                            <a href="service-details.html" class="read-more">
+                            <a href="greentoclean.html" class="read-more">
 									Read more
 									<i class="flaticon-right-arrow"></i>
 								</a>
@@ -327,20 +330,20 @@
 
                 <div class="col-lg-4 col-sm-6">
                     <div class="single-services">
-                        <a href="services-details.html">
+                        <a href="oneanddone.html">
                             <img src="assets/img/services/services-2.jpg" alt="Image">
                         </a>
 
                         <div class="services-content">
                             <h3>
-                                <a href="service-details.html">
+                                <a href="oneanddone.html">
 									One and Done
 									</a>
                             </h3>
 
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+                            <p>Give your pool the extra attention it needs. We can help you get your pool back into shape with a comprehensive one-time pool service.</p>
 
-                            <a href="service-details.html" class="read-more">
+                            <a href="oneanddone.html" class="read-more">
 									Read more
 									<i class="flaticon-right-arrow"></i>
 								</a>
@@ -350,20 +353,20 @@
 
                 <div class="col-lg-4 col-sm-6">
                     <div class="single-services">
-                        <a href="services-details.html">
+                        <a href="sand-filter.html">
                             <img src="assets/img/services/services-3.jpg" alt="Image">
                         </a>
 
                         <div class="services-content">
                             <h3>
-                                <a href="service-details.html">
+                                <a href="sand-filter.html">
 									Sand Filter Changes
 									</a>
                             </h3>
 
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+                            <p>We have the knowledge and expertise to help you easily and effectively replace your pool's sand filters.</p>
 
-                            <a href="service-details.html" class="read-more">
+                            <a href="sand-filter.html" class="read-more">
 									Read more
 									<i class="flaticon-right-arrow"></i>
 								</a>
@@ -373,20 +376,20 @@
 
                 <div class="col-lg-4 col-sm-6">
                     <div class="single-services">
-                        <a href="services-details.html">
+                        <a href="maintenance.html">
                             <img src="assets/img/services/services-4.jpg" alt="Image">
                         </a>
 
                         <div class="services-content">
                             <h3>
-                                <a href="service-details.html">
+                                <a href="maintenance.html">
 										Maintenance
 									</a>
                             </h3>
 
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+                            <p>Get the level of maintenance that's perfect for you by choosing from one of our maintenance packages.</p>
 
-                            <a href="service-details.html" class="read-more">
+                            <a href="maintenance.html" class="read-more">
 									Read more
 									<i class="flaticon-right-arrow"></i>
 								</a>
@@ -396,20 +399,20 @@
 
                 <div class="col-lg-4 col-sm-6">
                     <div class="single-services">
-                        <a href="services-details.html">
+                        <a href="openandclose.html">
                             <img src="assets/img/services/services-5.jpg" alt="Image">
                         </a>
 
                         <div class="services-content">
                             <h3>
-                                <a href="service-details.html">
+                                <a href="openandclose.html">
 									Openings and Closings
 									</a>
                             </h3>
 
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+                            <p>Allow us to verify your pool is ready for the winter, or make sure it's opened properly for the summer.</p>
 
-                            <a href="service-details.html" class="read-more">
+                            <a href="openandclose.html" class="read-more">
 									Read more
 									<i class="flaticon-right-arrow"></i>
 								</a>
@@ -419,20 +422,21 @@
 
                 <div class="col-lg-4 col-sm-6">
                     <div class="single-services">
-                        <a href="services-details.html">
+                        <a href="deckcleaning.html">
                             <img src="assets/img/services/services-6.jpg" alt="Image">
                         </a>
 
                         <div class="services-content">
                             <h3>
-                                <a href="service-details.html">
+                                <a href="deckcleaning.html">
 									Deck Pressure Washing
 									</a>
                             </h3>
 
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+                            <p>Make sure your pool deck is clean with our pressure washing services that'll leave it sparkling.
+                            </p>
 
-                            <a href="service-details.html" class="read-more">
+                            <a href="deckcleaning.html" class="read-more">
 									Read more
 									<i class="flaticon-right-arrow"></i>
 								</a>
