--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="assets/img/favicon.png">
     <!-- Title -->
-    <title>Clarksville Pool Cleaning</title>
+    <title>Clarksville Pool Cleaning - About Us</title>
 </head>
 
 <body>
@@ -340,7 +340,7 @@
 
 
     <!-- Start Page Title Area -->
-    <div class="page-title-area bg-1">
+    <!-- <div class="page-title-area bg-1">
         <div class="container">
             <div class="page-title-content">
                 <h2>About us</h2>
@@ -354,10 +354,13 @@
                 </ul>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- End Page Title Area -->
 
     <!-- Start About Area -->
+    <br>
+    <Br>
+    <bR>
     <section class="about-area pt-100 pb-70">
         <div class="container">
             <div class="row align-items-center">
