--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="assets/img/favicon.png">
     <!-- Title -->
-    <title>Clarksville Pool Cleaning</title>
+    <title>Clarksville Pool Cleaning - Contact Us</title>
 </head>
 
 <body>
@@ -290,7 +290,7 @@
     <!-- End Header Area -->
 
     <!-- Start Page Title Area -->
-    <div class="page-title-area bg-15">
+    <!-- <div class="page-title-area bg-15">
         <div class="container">
             <div class="page-title-content">
                 <h2>Contact</h2>
@@ -304,10 +304,11 @@
                 </ul>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- End Page Title Area -->
 
     <!-- Start Contact Area -->
+    <br><br><br><br><br><br>
     <section class="main-contact-area ptb-100">
         <div class="container">
             <div class="row align-items-center">
