--- a/contact.html
+++ b/contact.html
@@ -368,7 +368,7 @@
                                 <h2>Ready to get started?</h2>
                             </div>
 
-                            <form id="contactForm">
+                            <form action="POST" data-netlify="true" id="contactForm">
                                 <div class="row">
                                     <div class="col-lg-6 col-sm-6">
                                         <div class="form-group">
