--- a/contact.html
+++ b/contact.html
@@ -403,9 +403,9 @@
                                     </div>
 
                                     <div class="col-lg-12 col-md-12">
-                                        <button type="submit" class="default-btn">
-												<span>Send message</span>
-											</button>
+                                        <input type="submit" value="Send Message" class="default-btn" />
+
+
                                         <div id="msgSubmit" class="h3 text-center hidden"></div>
                                         <div class="clearfix"></div>
                                     </div>
