--- a/contact.html
+++ b/contact.html
@@ -330,10 +330,10 @@
                                 <span>Phone</span>
                                 <a href="tel:+1-(931) 320-8307">+1 (931) 320-8307</a>
                             </li>
-                            <li>
+                            <li style="padding-top: 10px">
                                 <i class="bx bxs-envelope"></i>
-                                <span>Email</span>
-                                <a href="mailto:clarksvillepoolcleaning@gmail.com">clarksvillepoolcleaning@gmail.com</a>
+                                <span><a href="mailto:clarksvillepoolcleaning@gmail.com" style="font-size: 16px">Email Us</a></span>
+
                             </li>
                         </ul>
 
@@ -372,49 +372,72 @@
                                 <div class="row">
                                     <div class="col-lg-6 col-sm-6">
                                         <div class="form-group">
-                                            <input type="text" class="form-control" id="First-Name" placeholder="Name">
+                                            <label>Name</label>
+                                            <input type="text" name="name" id="name" class="form-control" required data-error="Please enter your name">
+                                            <div class="help-block with-errors"></div>
                                         </div>
                                     </div>
 
                                     <div class="col-lg-6 col-sm-6">
                                         <div class="form-group">
-                                            <input type="email" class="form-control" id="Email" placeholder="Email">
+                                            <label>Email Address</label>
+                                            <input type="email" name="email" id="email" class="form-control" required data-error="Please enter your email">
+                                            <div class="help-block with-errors"></div>
                                         </div>
                                     </div>
 
                                     <div class="col-lg-6 col-sm-6">
                                         <div class="form-group">
-                                            <input type="text" class="form-control" id="Number" placeholder="Phone number">
+                                            <label>Phone Number</label>
+                                            <input type="phone" name="phone" id="phone" class="form-control" required data-error="Please enter your phone number">
+                                            <div class="help-block with-errors"></div>
                                         </div>
                                     </div>
 
                                     <div class="col-lg-6 col-sm-6">
                                         <div class="form-group">
-                                            <select>
-                                                <option value="1">Select Service</option>
-                                                <option value="2">Green To Clean</option>
-                                                <option value="3">A One and Done</option>
-                                                <option value="4">Sand Filter Change</option>
-                                                <option value="5">Monthly Maintenance</option>
-                                                <option value="6">A Stress Free Summer</option>
-                                                <option value="7">Deck Cleaning</option>
-                                                <option value="8">Pool Opening</option>
-                                                <option value="9">Pool Closing</option>
-                                                <option value="10">Sand Filter Changes</option>
+                                            <label>Service (optional)</label>
+                                            <select type="phone" name="phone" id="phone" class="form-control" data-error="Please enter your phone number">
+                                                <option value="1">Select service</option>
+											<option value="2">Green To Clean</option>
+											<option value="3">A One and Done</option>
+											<option value="4">Sand Filter Change</option>
+											<option value="5">Monthly Maintenance</option>
+                                            <option value="6">A Stress Free Summer</option>
+                                            <option value="7">Deck Cleaning</option>
+                                            <option value="8">Pool Opening</option>
+                                            <option value="9">Pool Closing</option>
+                                            <option value="10">Sand Filter Changes</option>
+                                            <option value="11">Something Else</option>
                                             </select>
+                                            <!-- <div class="help-block with-errors"></div> -->
                                         </div>
                                     </div>
 
-                                    <div class="col-lg-12">
+                                    <div class="col-12">
                                         <div class="form-group">
-                                            <textarea name="message" class="form-control" id="Message" cols="30" rows="5" placeholder="Message"></textarea>
+                                            <label>Subject</label>
+                                            <input type="text" name="msg_subject" id="msg_subject" class="form-control" required data-error="Please enter your subject">
+                                            <div class="help-block with-errors"></div>
                                         </div>
+                                    </div>
+
+                                    <div class="col-12">
+                                        <div class="form-group">
+                                            <label>Message</label>
+                                            <textarea name="message" class="form-control" id="message" cols="30" rows="10" required data-error="Write your message"></textarea>
+                                            <div class="help-block with-errors"></div>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-lg-12 col-md-12">
+                                        <input type="submit" value="Send Message" class="default-btn" />
+
+
+                                        <div id="msgSubmit" class="h3 text-center hidden"></div>
+                                        <div class="clearfix"></div>
                                     </div>
                                 </div>
-
-                                <button type="submit" class="default-btn">
-                                        <span>Send message</span>
-                                    </button>
                             </form>
                         </div>
                     </div>
@@ -550,6 +573,7 @@
     <script src="assets/js/appear.min.js"></script>
     <!-- Odometer Min JS -->
     <script src="assets/js/odometer.min.js"></script>
+
     <!-- Ajaxchimp Min JS -->
     <script src="assets/js/ajaxchimp.min.js"></script>
     <!-- Custom JS -->
