--- a/index.html
+++ b/index.html
@@ -675,7 +675,7 @@
                 </div>
 
                 <div class="col-lg-6">
-                    <form class="we-area-form">
+                    <form action="POST" data-netlify="true" class="we-area-form">
                         <div class="we-area-title">
                             <h2>Get a free quote!</h2>
                         </div>
@@ -683,50 +683,74 @@
                         <div class="row">
                             <div class="col-lg-6 col-sm-6">
                                 <div class="form-group">
-                                    <input type="text" class="form-control" id="First-Name" placeholder="Name">
+                                    <label>Name</label>
+                                    <input type="text" name="name" id="name" class="form-control" required data-error="Please enter your name">
+                                    <div class="help-block with-errors"></div>
                                 </div>
                             </div>
 
                             <div class="col-lg-6 col-sm-6">
                                 <div class="form-group">
-                                    <input type="email" class="form-control" id="Email" placeholder="Email">
+                                    <label>Email Address</label>
+                                    <input type="email" name="email" id="email" class="form-control" required data-error="Please enter your email">
+                                    <div class="help-block with-errors"></div>
                                 </div>
                             </div>
 
                             <div class="col-lg-6 col-sm-6">
                                 <div class="form-group">
-                                    <input type="text" class="form-control" id="Number" placeholder="Phone number">
+                                    <label>Phone Number</label>
+                                    <input type="phone" name="phone" id="phone" class="form-control" required data-error="Please enter your phone number">
+                                    <div class="help-block with-errors"></div>
                                 </div>
                             </div>
 
                             <div class="col-lg-6 col-sm-6">
                                 <div class="form-group">
-                                    <select>
-											<option value="1">Select your services</option>
-											<option value="2">Green To Clean</option>
-											<option value="3">A One and Done</option>
-											<option value="4">Sand Filter Change</option>
-											<option value="5">Monthly Maintenance</option>
-                      <option value="6">A Stress Free Summer</option>
-                      <option value="7">Deck Cleaning</option>
-                      <option value="8">Pool Opening</option>
-                      <option value="9">Pool Closing</option>
-                      <option value="10">Sand Filter Changes</option>
-										</select>
+                                    <label>Service (optional)</label>
+                                    <select type="phone" name="phone" id="phone" class="form-control" data-error="Please enter your phone number">
+                                    <option value="1">Select service</option>
+                                    <option value="2">Green To Clean</option>
+                                    <option value="3">A One and Done</option>
+                                    <option value="4">Sand Filter Change</option>
+                                    <option value="5">Monthly Maintenance</option>
+                                    <option value="6">A Stress Free Summer</option>
+                                    <option value="7">Deck Cleaning</option>
+                                    <option value="8">Pool Opening</option>
+                                    <option value="9">Pool Closing</option>
+                                    <option value="10">Sand Filter Changes</option>
+                                    <option value="11">Something Else</option>
+                                    </select>
+                                    <div class="help-block with-errors"></div>
                                 </div>
                             </div>
 
-                            <div class="col-lg-12">
+                            <div class="col-12">
                                 <div class="form-group">
-                                    <textarea name="message" class="form-control" id="Message" cols="30" rows="5" placeholder="Message"></textarea>
+                                    <label>Subject</label>
+                                    <input type="text" name="msg_subject" id="msg_subject" class="form-control" required data-error="Please enter your subject">
+                                    <div class="help-block with-errors"></div>
                                 </div>
+                            </div>
+
+                            <div class="col-12">
+                                <div class="form-group">
+                                    <label>Message</label>
+                                    <textarea name="message" class="form-control" id="message" cols="30" rows="10" required data-error="Write your message"></textarea>
+                                    <div class="help-block with-errors"></div>
+                                </div>
+                            </div>
+
+                            <div class="col-lg-12 col-md-12">
+                                <input type="submit" value="Send Message" class="default-btn" />
+
+
+                                <div id="msgSubmit" class="h3 text-center hidden"></div>
+                                <div class="clearfix"></div>
                             </div>
                         </div>
-
-                        <button type="submit" class="default-btn">
-								<span>Send message</span>
-							</button>
                     </form>
+
                 </div>
             </div>
         </div>
