--- a/contact.html
+++ b/contact.html
@@ -397,7 +397,7 @@
                                     <div class="col-lg-6 col-sm-6">
                                         <div class="form-group">
                                             <label>Service (optional)</label>
-                                            <select type="phone" name="phone" id="phone" class="form-control" data-error="Please enter your phone number">
+                                            <select type="select" name="service" id="service" class="form-control">
                                                 <option value="1">Select service</option>
 											<option value="2">Green To Clean</option>
 											<option value="3">A One and Done</option>
