--- a/index.html
+++ b/index.html
@@ -708,7 +708,7 @@
                             <div class="col-lg-6 col-sm-6">
                                 <div class="form-group">
                                     <label>Service (optional)</label>
-                                    <select type="select" name="service" id="service" class="form-control">
+                                    <select name="service" id="service" class="form-control">
                                     <option value="1">Select service</option>
                                     <option value="2">Green To Clean</option>
                                     <option value="3">A One and Done</option>
