--- a/index.html
+++ b/index.html
@@ -700,7 +700,7 @@
                             <div class="col-lg-6 col-sm-6">
                                 <div class="form-group">
                                     <label>Phone Number</label>
-                                    <input type="phone" name="phone" id="phone" class="form-control" required data-error="Please enter your phone number">
+                                    <input type="tel" name="phone" id="phone" class="form-control" required data-error="Please enter your phone number">
                                     <div class="help-block with-errors"></div>
                                 </div>
                             </div>
@@ -708,7 +708,7 @@
                             <div class="col-lg-6 col-sm-6">
                                 <div class="form-group">
                                     <label>Service (optional)</label>
-                                    <select name="service" id="service" class="form-control">
+                                    <select type="checkbox" name="service" id="service" class="form-control">
                                     <option value="1">Select service</option>
                                     <option value="2">Green To Clean</option>
                                     <option value="3">A One and Done</option>
