--- a/index.html
+++ b/index.html
@@ -709,7 +709,7 @@
                                 <div class="form-group">
                                     <label>Service (optional)</label>
                                     <select type="checkbox" name="service" id="service" class="form-control">
-                                    <option value="1">Select service</option>
+                                    <option value="test">Select service</option>
                                     <option value="2">Green To Clean</option>
                                     <option value="3">A One and Done</option>
                                     <option value="4">Sand Filter Change</option>
