--- a/contact.html
+++ b/contact.html
@@ -398,7 +398,7 @@
                                         <div class="form-group">
                                             <label>Service (optional)</label>
                                             <select type="select" name="service" id="service" class="form-control">
-                                                <option value="1">Select service</option>
+                                            <option value="test">Select service</option>
 											<option value="2">Green To Clean</option>
 											<option value="3">A One and Done</option>
 											<option value="4">Sand Filter Change</option>
@@ -432,8 +432,6 @@
 
                                     <div class="col-lg-12 col-md-12">
                                         <input type="submit" value="Send Message" class="default-btn" />
-
-
                                         <div id="msgSubmit" class="h3 text-center hidden"></div>
                                         <div class="clearfix"></div>
                                     </div>
