--- a/index.html
+++ b/index.html
@@ -708,17 +708,15 @@
                             <div class="col-lg-6 col-sm-6">
                                 <div class="form-group">
                                     <label>Service (optional)</label>
-                                    <select type="checkbox" name="service" id="service" class="form-control">
-                                    <option value="test">Select service</option>
+                                    <select type="select" name="service" id="service" class="form-control">
+                                    <option value="1">Select service</option>
                                     <option value="2">Green To Clean</option>
-                                    <option value="3">A One and Done</option>
+                                    <option value="3">One and Done</option>
                                     <option value="4">Sand Filter Change</option>
-                                    <option value="5">Monthly Maintenance</option>
-                                    <option value="6">A Stress Free Summer</option>
+                                    <option value="5">Maintenance</option>
                                     <option value="7">Deck Cleaning</option>
                                     <option value="8">Pool Opening</option>
                                     <option value="9">Pool Closing</option>
-                                    <option value="10">Sand Filter Changes</option>
                                     <option value="11">Something Else</option>
                                     </select>
                                     <div class="help-block with-errors"></div>
@@ -743,8 +741,6 @@
 
                             <div class="col-lg-12 col-md-12">
                                 <input type="submit" value="Send Message" class="default-btn" />
-
-
                                 <div id="msgSubmit" class="h3 text-center hidden"></div>
                                 <div class="clearfix"></div>
                             </div>
