--- a/index.html
+++ b/index.html
@@ -675,10 +675,11 @@
                 </div>
 
                 <div class="col-lg-6">
+                    <div class="we-area-title" style="text-align:center;">
+                        <h2>Get a free quote!</h2>
+                    </div>
                     <form action="POST" data-netlify="true" class="we-area-form">
-                        <div class="we-area-title">
-                            <h2>Get a free quote!</h2>
-                        </div>
+
 
                         <div class="row">
                             <div class="col-lg-6 col-sm-6">
