--- a/contact.html
+++ b/contact.html
@@ -398,7 +398,7 @@
                                         <div class="form-group">
                                             <label>Service (optional)</label>
                                             <select type="select" name="service" id="service" class="form-control">
-                                            <option value="test">Select service</option>
+                                            <option value="1">Select service</option>
 											<option value="2">Green To Clean</option>
 											<option value="3">A One and Done</option>
 											<option value="4">Sand Filter Change</option>
