--- a/contact.html
+++ b/contact.html
@@ -389,7 +389,7 @@
                                     <div class="col-lg-6 col-sm-6">
                                         <div class="form-group">
                                             <label>Phone Number</label>
-                                            <input type="phone" name="phone" id="phone" class="form-control" required data-error="Please enter your phone number">
+                                            <input type="tel" name="phone" id="phone" class="form-control" required data-error="Please enter your phone number">
                                             <div class="help-block with-errors"></div>
                                         </div>
                                     </div>
@@ -399,18 +399,16 @@
                                             <label>Service (optional)</label>
                                             <select type="select" name="service" id="service" class="form-control">
                                             <option value="1">Select service</option>
-											<option value="2">Green To Clean</option>
-											<option value="3">A One and Done</option>
-											<option value="4">Sand Filter Change</option>
-											<option value="5">Monthly Maintenance</option>
-                                            <option value="6">A Stress Free Summer</option>
+                                            <option value="2">Green To Clean</option>
+                                            <option value="3">One and Done</option>
+                                            <option value="4">Sand Filter Change</option>
+                                            <option value="5">Maintenance</option>
                                             <option value="7">Deck Cleaning</option>
                                             <option value="8">Pool Opening</option>
                                             <option value="9">Pool Closing</option>
-                                            <option value="10">Sand Filter Changes</option>
                                             <option value="11">Something Else</option>
                                             </select>
-                                            <!-- <div class="help-block with-errors"></div> -->
+                                            <div class="help-block with-errors"></div>
                                         </div>
                                     </div>
 
