--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@
                     <div class="we-area-title" style="text-align:center;">
                         <h2>Get a free quote!</h2>
                     </div>
-                    <form action="POST" data-netlify="true" class="we-area-form">
+                    <form action="POST" data-netlify="true" id="homeForm" class="we-area-form">
 
 
                         <div class="row">
