--- a/contact.html
+++ b/contact.html
@@ -373,7 +373,7 @@
                                     <div class="col-lg-6 col-sm-6">
                                         <div class="form-group">
                                             <label>Name</label>
-                                            <input type="text" name="name" id="name" class="form-control" required data-error="Please enter your name">
+                                            <input type="text" name="name1" id="name1" class="form-control" required data-error="Please enter your name">
                                             <div class="help-block with-errors"></div>
                                         </div>
                                     </div>
@@ -381,7 +381,7 @@
                                     <div class="col-lg-6 col-sm-6">
                                         <div class="form-group">
                                             <label>Email Address</label>
-                                            <input type="email" name="email" id="email" class="form-control" required data-error="Please enter your email">
+                                            <input type="email" name="email1" id="email1" class="form-control" required data-error="Please enter your email">
                                             <div class="help-block with-errors"></div>
                                         </div>
                                     </div>
@@ -389,7 +389,7 @@
                                     <div class="col-lg-6 col-sm-6">
                                         <div class="form-group">
                                             <label>Phone Number</label>
-                                            <input type="tel" name="phone" id="phone" class="form-control" required data-error="Please enter your phone number">
+                                            <input type="tel" name="phone1" id="phone1" class="form-control" required data-error="Please enter your phone number">
                                             <div class="help-block with-errors"></div>
                                         </div>
                                     </div>
@@ -397,7 +397,7 @@
                                     <div class="col-lg-6 col-sm-6">
                                         <div class="form-group">
                                             <label>Service (optional)</label>
-                                            <select type="select" name="service" id="service" class="form-control">
+                                            <select type="select" name="service1" id="service1" class="form-control">
                                             <option value="1">Select service</option>
                                             <option value="2">Green To Clean</option>
                                             <option value="3">One and Done</option>
