--- a/contact.html
+++ b/contact.html
@@ -368,7 +368,7 @@
                                 <h2>Ready to get started?</h2>
                             </div>
 
-                            <form action="POST" data-netlify="true" id="contactForm">
+                            <form action="POST" data-netlify="true" data-netlify-recaptcha="true" id="contactForm">
                                 <div class="row">
                                     <div class="col-lg-6 col-sm-6">
                                         <div class="form-group">
@@ -411,6 +411,7 @@
                                             <div class="help-block with-errors"></div>
                                         </div>
                                     </div>
+                                    <div data-netlify-recaptcha="true"></div>
 
                                     <div class="col-12">
                                         <div class="form-group">
