--- a/contact.html
+++ b/contact.html
@@ -433,7 +433,7 @@
                                         <input type="submit" value="Send Message" class="default-btn" />
                                         <div id="msgSubmit" class="h3 text-center hidden"></div>
                                         <div class="clearfix"></div>
-                                        <div data-netlify-recaptcha="true"></div>
+                                        <div data-netlify-recaptcha="true" style="padding-top: 20px;"></div>
                                     </div>
 
                                 </div>
