--- a/contact.html
+++ b/contact.html
@@ -194,7 +194,7 @@
                                     </li>
 
                                     <li class="nav-item">
-                                        <a href="gallery.html" class="nav-link">Gallery</a>
+                                        <a href="https://www.instagram.com/clarksvillepoolcleaning/" target="_blank" class="nav-link">Gallery</a>
                                     </li>
 
                                     <li class="nav-item">
