--- a/maintenance.html
+++ b/maintenance.html
@@ -230,7 +230,7 @@
     <!-- End Header Area -->
 
     <!-- Start Page Title Area -->
-    <div class="page-title-area bg-2">
+    <!-- <div class="page-title-area bg-2">
         <div class="container">
             <div class="page-title-content">
                 <h2>Maintenance</h2>
@@ -244,7 +244,7 @@
                 </ul>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- End Page Title Area -->
 
     <!-- Start FAQ Area -->
